# libigl-renderer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
base/: LibiglMeshRendererT.cc  LibiglMeshRendererT.h  LibiglMeshT.cc  LibiglMeshT.h  Primitive.cc  Primitive.h  Symmetry.cc  Symmetry.h
cmake/: FindFreeGLUT.cmake  FindLIBIGL.cmake
data/: bunny.pts
data/LabeledPSBDataset/: 161.pts  161_labels.txt  161_y.txt
include/: LibiglMesh.h  LibiglMesh.h.blank
modules/: PCA.h  consistent_face_flippping.h  edge_lengths_simple.h  edge_topology_non_manifold.h  merge_meshes.h  remove_duplicates_custom.h  remove_small_components.h  symmetric_elements.h  upsample_non_manifold.h
renderers/GL/: GLMeshRenderer.cc  GLMeshRenderer.h
renderers/glut/: GlutMeshViewer.cc  GlutMeshViewer.h
renderers/libigl/: LibiglMeshViewer.cc  LibiglMeshViewer.h
renderers/offscreen/: OffscreenRenderer.cc  OffscreenRenderer.h
renderers/osmesa/: OSMesaMeshRenderer.cc  OSMesaMeshRenderer.h
src/: LibiglMesh.cc  main.cc  mesh_processing.cc  point_set_processing.cc
utils/: google_tools.h  kd_tree.h  mds.h  mean_shift.h  mrf_potts.h  utils.cc  utils.h
utils/SparseICP/: ICP.h
utils/TRW_S-v1.3/: MRFEnergy.h
utils/bhtsne/: tsne.cpp  tsne.h  tsne_eigen_wrapper.h
utils/filesystem/: path.h
utils/glut_geometry/: glut_geometry.cc  glut_geometry.h
utils/simplerandom/: simplerandom.cc
